--- a/ALaCarte/res/layout/activity_main.xml
+++ b/ALaCarte/res/layout/activity_main.xml
@@ -14,15 +14,18 @@
         android:adjustViewBounds="true"
         android:src="@raw/banner" />
      <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hotMenu"
+        android:text="@string/readyToScan"
+        android:gravity="center"
+        android:textSize="30sp"
         android:textStyle="bold" />
 	
      <ListView
         android:id="@+id/listview"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
+        android:layout_height="fill_parent" 
+        android:layout_marginBottom="20.0sp">
     </ListView>
 
 </LinearLayout>
