--- a/ALaCarte/res/layout/activity_view_menu.xml
+++ b/ALaCarte/res/layout/activity_view_menu.xml
@@ -7,18 +7,82 @@
     android:orientation="vertical"
     tools:context=".ViewMenuActivity" >
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/item_name"
-        android:textStyle="bold" />
+        android:background="@drawable/menu_header_boder"
+        android:padding="5sp"
+        android:paddingTop="10sp" >
 
-    <TextView
-        android:id="@+id/contact"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/item_name" />
+        <com.example.staggeredgridviewdemo.views.ScaleImageView
+            android:id="@+id/shop_image"
+            android:layout_width="120sp"
+            android:layout_height="wrap_content"
+            android:src="@raw/no" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5sp"
+            android:layout_toRightOf="@+id/shop_image"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/item_name"
+                android:textColor="@color/red"
+                android:textSize="17sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/contact"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/item_name" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/like_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/shop_image"
+            android:text="Like"
+            android:textSize="14sp" >
+        </Button>
+
+        <Button
+            android:id="@+id/checkin_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/shop_image"
+            android:layout_toRightOf="@+id/like_button"
+            android:text="Checkin"
+            android:textSize="14sp" >
+        </Button>
+
+        <Button
+            android:id="@+id/share_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/shop_image"
+            android:layout_toRightOf="@+id/checkin_button"
+            android:text="Share"
+            android:textSize="14sp" >
+        </Button>
+
+        <Button
+            android:id="@+id/comment_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/shop_image"
+            android:layout_toRightOf="@+id/share_button"
+            android:text="Comment"
+            android:textSize="14sp" >
+        </Button>
+    </RelativeLayout>
 
     <com.origamilabs.library.views.StaggeredGridView
         android:id="@+id/staggeredGridView1"
