--- a/ALaCarte/res/layout/row_spotlight.xml
+++ b/ALaCarte/res/layout/row_spotlight.xml
@@ -1,20 +1,100 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:background="@drawable/spotlight_background"
+    android:orientation="vertical"
+    android:paddingLeft="5sp"
+    android:paddingRight="5sp"
+    android:paddingTop="20sp" >
 
-    <TextView
-        android:id="@+id/spot_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/item_name"
-        android:textStyle="bold" />
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" >
 
-    <com.example.staggeredgridviewdemo.views.ScaleImageView
-        android:id="@+id/imageView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@null" />
-    
+        <TextView
+            android:id="@+id/spot_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:text="@string/item_name"
+            android:textSize="18sp"
+            android:textStyle="bold|italic" />
+
+        <TextView
+            android:id="@+id/infoTxtCredits"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="15sp"
+            android:background="@color/green"
+            android:padding="5sp"
+            android:text="@string/seemore"
+            android:textColor="@color/white"
+            android:textSize="9sp"
+            android:textStyle="bold|italic" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:baselineAligned="false"
+        android:orientation="horizontal" >
+
+        <LinearLayout
+            android:layout_width="0sp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:padding="5sp"
+            android:orientation="vertical" >
+
+            <com.example.staggeredgridviewdemo.views.ScaleImageView
+                android:id="@+id/spotlight_image1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@raw/no" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/item_name"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0sp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:padding="5sp"
+            android:orientation="vertical" >
+
+            <com.example.staggeredgridviewdemo.views.ScaleImageView
+                android:id="@+id/spotlight_image2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@raw/no" />
+            
+                        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/item_name"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0sp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:padding="5sp"
+            android:orientation="vertical" >
+
+            <com.example.staggeredgridviewdemo.views.ScaleImageView
+                android:id="@+id/spotlight_image3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@raw/no" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/item_name"/>
+        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
