--- a/ALaCarte/res/values/colors.xml
+++ b/ALaCarte/res/values/colors.xml
@@ -3,5 +3,6 @@
 
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFF</color>
-
+    <color name="green">#7CFC00</color>
+	<color name="red">#FF0000</color>
 </resources>
