--- a/ALaCarte/res/drawable-hdpi/menu_header_border2.xml
+++ b/ALaCarte/res/drawable-hdpi/menu_header_border2.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
      android:shape="rectangle">
      <stroke android:width="2dp" android:color="#FFFFFFFF" />
-     <gradient android:startColor="#56ffff" android:endColor="#56aaff"
+     <gradient android:startColor="#ffffff" android:endColor="#CCFFFF"
             android:angle="225"/>
  
     <corners android:bottomRightRadius="7dp" android:bottomLeftRadius="7dp"
