--- a/ALaCarte/res/layout/activity_main.xml
+++ b/ALaCarte/res/layout/activity_main.xml
@@ -3,9 +3,9 @@
     xmlns:staggered="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="@color/background"
     android:orientation="vertical"
-    tools:context=".ViewMenuActivity" >
+    tools:context=".HomeActivity" >
     
     <ImageView
         android:id="@+id/imageView1"
