--- a/ALaCarte/res/values/colors.xml
+++ b/ALaCarte/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="white">#FFFFFF</color>
     <color name="green">#7CFC00</color>
 	<color name="red">#FF0000</color>
+	<color name="background">#D7CEC7</color>
+	<color name="spotlight_item_background">#F4F3F1</color>
 </resources>
