--- a/ALaCarte/res/layout/activity_main.xml
+++ b/ALaCarte/res/layout/activity_main.xml
@@ -14,13 +14,33 @@
         android:adjustViewBounds="true"
         android:src="@raw/banner" />
 
-    <com.facebook.widget.LoginButton
-        android:id="@+id/authButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
 
+        <Button
+            android:id="@+id/loginButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="100dp"
+            android:background="@drawable/button_login"
+            android:text="@string/login"
+            android:textColor="#fff"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/logoutButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="100dp"
+            android:background="@drawable/button_login"
+            android:text="@string/logout"
+            android:textColor="#fff"
+            android:textStyle="bold" 
+            android:visibility="invisible"/>
+    </RelativeLayout>
 
     <TextView
         android:layout_width="match_parent"
